kubernetes/angular-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rules-engine-ui-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080  # Add nodePort to explicitly expose it on port 30080
  selector:
    app: rules-engine-ui
