kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "minikube.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rules-engine-ui-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: rules-engine-api-service
            port:
              number: 3000
